yml/function.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenseemailsender
  namespace: default
  labels:
    app: expenseemailsender
spec:
  selector:
    matchLabels:
      app: expenseemailsender
  template:
    metadata:
      labels:
        app: expenseemailsender
    spec:
      containers:
      - name: expenseemailsender
        image: __FUNCIMAGE__
---
