yml/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: conexp-frontend
    aadpodidbinding: exppoidentity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conexp-frontend
  template:
    metadata:
      labels:
        app: conexp-frontend
        aadpodidbinding: exppoidentity
    spec:
      containers:
      - name: frontend
        image: cncfazure.azurecr.io/conexp/web:latest
        ports:
        - containerPort: 80  
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: conexp-frontend-svc
  labels:
    app: conexp-frontend
spec:
  selector:
    app: conexp-frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress-rules
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - aks.sarwascloud.com
    secretName: letsencrypt-tls
  rules:
  - host: aks.sarwascloud.com
    http:
      paths:
      - backend:
          serviceName: conexp-frontend-svc
          servicePort: 80
        path: /
